--- a/public/en/about/index.html
+++ b/public/en/about/index.html
@@ -84,7 +84,7 @@
     "name": "",
     "headline": "",
     "description": "关于",
-    "abstract": "Hello, I am Kody, currently a postgraduate student in the Cybersecurity program at Shanghai Jiao Tong University. Welcome to my blog! Feel free to contact me if necessary. MA",
+    "abstract": "Hello, I am Kody, currently a postgraduate student in Cyber Science and Engineering, Shanghai Jiao Tong University. Welcome to my blog! Feel free to contact me if necessary. MA",
     "inLanguage": "en",
     "url" : "http:\/\/localhost:1313\/blog\/en\/about\/",
     "author" : {
@@ -844,7 +844,7 @@
 
 
         <div class="article-content max-w-prose mb-20">
-          <p>Hello, I am Kody, currently a postgraduate student in the Cybersecurity program at Shanghai Jiao Tong University.</p>
+          <p>Hello, I am Kody, currently a postgraduate student in Cyber Science and Engineering, Shanghai Jiao Tong University.</p>
 <p>Welcome to my blog! Feel free to contact me if necessary.</p>
 <br>
 <p>MAIL：<a
